--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <project name="shopping-ucs" basedir="." default="deploy">
 
-	<property name="jboss.dir" value="/Users/alesshh/Projects/java/jboss-as-7.1.1.Final" />
+	<property name="jboss.dir" value="jboss-as-7.1.1.Final" />
 	<property name="jboss.lib.dir" value="${jboss.dir}/modules" />
 	<property name="jboss.deploy" value="${jboss.dir}/standalone/deployments" />
 	<property name="bin.dir" value="bin" />
@@ -82,20 +82,20 @@
 			</classpath>
 		</java>
 	</target>
-	
+
 	<target name="init-db">
 
 		<sql driver="org.postgresql.Driver" url="jdbc:postgresql://localhost/shopping_ucs" userid="alesshh" password="">
 			<classpath refid="jars" />
 
-				
+
 				create table AppUser (id int not null, username varchar(60) not null, password varchar(60) not null, role varchar(60));
-			
-									
+
+
 				insert into AppUser values (1,'ucs','ucs', 'user');
-			
+
 				insert into AppUser values (1,'alesshh','123456', 'admin');
-				
+
 		</sql>
 	</target>
 </project>
