--- a/metadata/web.xml
+++ b/metadata/web.xml
@@ -7,6 +7,11 @@
 	<context-param>
 		<param-name>org.jboss.jbossfaces.JSF_CONFIG_NAME</param-name>
 		<param-value>Mojarra-2.0</param-value>
+	</context-param
+	>
+	<context-param>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>client</param-value>
 	</context-param>
 	
 	<servlet>
@@ -26,7 +31,7 @@
 	
 	<!-- Informações de segurança JAAS -->
 	 
-	<security-constraint>
+	<!-- <security-constraint>
 		<web-resource-collection>
 			<web-resource-name>shopping-ucs</web-resource-name>
 			<url-pattern>/admin/*</url-pattern>
@@ -34,7 +39,7 @@
 		<auth-constraint>
 			<role-name>admin_auth</role-name>
 		</auth-constraint>
-	</security-constraint>
+	</security-constraint> -->
 
 	<login-config>
 		<auth-method>FORM</auth-method>
