--- a/metadata/web.xml
+++ b/metadata/web.xml
@@ -31,15 +31,16 @@
 	
 	<!-- Informações de segurança JAAS -->
 	 
-	<!-- <security-constraint>
+	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>shopping-ucs</web-resource-name>
 			<url-pattern>/admin/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
-			<role-name>admin_auth</role-name>
+			<role-name>admin</role-name>
+			<role-name>master</role-name>
 		</auth-constraint>
-	</security-constraint> -->
+	</security-constraint>
 
 	<login-config>
 		<auth-method>FORM</auth-method>
@@ -51,8 +52,18 @@
 	</login-config>
 	
 	<security-role>
-		<description>Usuários autorizados</description>
+		<description>Admin</description>
 		<role-name>admin</role-name>
+	</security-role>
+	
+	<security-role>
+		<description>Master</description>
+		<role-name>master</role-name>
+	</security-role>
+	
+	<security-role>
+		<description>User</description>
+		<role-name>user</role-name>
 	</security-role>
 	
 	<session-config>
