--- a/metadata/web.xml
+++ b/metadata/web.xml
@@ -7,8 +7,7 @@
 	<context-param>
 		<param-name>org.jboss.jbossfaces.JSF_CONFIG_NAME</param-name>
 		<param-value>Mojarra-2.0</param-value>
-	</context-param
-	>
+	</context-param>
 	<context-param>
 		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
 		<param-value>client</param-value>
